[package]
name = "qqt-csv-loader"
version = "0.1.0"
authors = ["J-F Bilodeau <jfbilodeau@chronogears.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
csv = "1.1"
reqwest = "0.10"
qqt-dataset = { path = "../qqt-dataset" }
